[package]
name = "camel-up"
version = "0.1.0"
authors = ["Daan van Berkel <daan.van.berkel.1980@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "An oracle for the game Camel Up"
repository = "https://github.com/fifth-postulate/camel-up-oracle"
readme = "README.md"
keywords = ["game", "oracle", "camel"]
categories = ["games", "mathematics"]
license = "MIT"
exclude = ["/docs"]

[badges]
travis-ci = { repository = "fifth-postulate/camel-up-oracle" }
coveralls = { repository = "fifth-postulate/camel-up-oracle", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
clap = "2.33.0"